--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <button class="start-button" onclick="startSurprise()">¿Lista para una sorpresa? ❤️</button>
 
     <div id="finalMessage" class="final-message hidden">
-        <h1>❤️ ¡Te Amo Mi Amor! ❤️</h1>
+        <h1>❤️ ¡Te Amo Mi Mashaaa! ❤️</h1>
         <p>
             Cada día a tu lado es una aventura mágica. Tu sonrisa ilumina mi mundo y tu amor hace que todo sea posible.
             Eres mi presente y mi futuro, mi sueño hecho realidad.
