--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
     <button class="start-button" onclick="startSurprise()">¿Lista para una sorpresa? ❤️</button>
 
     <div id="finalMessage" class="final-message hidden">
-        <h1>❤️ ¡Te Amo Mi Amor! ❤️</h1>
+        <h1>❤️ ¡Lofiuuuu Mi Mashaaaaa! ❤️</h1>
         <p>
-            Cada día a tu lado es una aventura mágica. Tu sonrisa ilumina mi mundo y tu amor hace que todo sea posible.
-            Eres mi presente y mi futuro, mi sueño hecho realidad.
+            Feliz Día de San Valentín, mi querida Mashaaa ❤️
+
+Desde el momento en que llegaste a mi vida, todo ha tomado un matiz más hermoso. Eres mi fuente de inspiración, mi refugio y mi alegría. No encuentro las palabras necesarias para expresar lo agradecido que estoy por cada instante que compartimos, por esa dulzura que irradias, por tu amor y por la manera en que iluminas mis días con tu sonrisa.
+
+Cada latido de mi corazón lleva tu nombre, y cada sueño sobre el futuro te incluye a mi lado. No importa dónde estemos ni lo que ocurra, siempre deseo caminar a tu lado, apoyarte en cada paso y hacerte sentir lo especial que eres para mí.
+
+En este día dedicado al amor, quiero recordarte cuán importante eres en mi vida. No solo eres mi pareja, sino también mi mejor amiga, mi compañera de aventuras y la persona con quien anhelo construir todos mis sueños.
+
+Te amo con todo mi ser, mi  Mashaaaa, y siempre haré lo posible para verte sonreír. 💕✨
         </p>
         <p>
             !Feliz Día de San Valentín! 💑
